misc: updated configs, refs #305 #506
* updated configs based on ETPro global configs
* removed unused maps mapscripts
* removed maps hashes for now (mapscripts need to be be updated)

--- a/etmain/configs/defaultcomp.config
+++ b/etmain/configs/defaultcomp.config
@@ -1,3 +1,6 @@
+//
+// Legacy Default Competition
+//
 // !!! IMPORTANT NOTE !!!
 // Ensure all values are surrounded by quotes, the parser can't properly deal with negative values otherwise.
 
@@ -16,7 +19,6 @@ init
 	setl g_voicechatsallowed "5"
 	setl g_warmup "15"
 	setl match_latejoin "0"
-	setl match_mutespecs "0"
 	setl match_timeoutcount "1"
 	setl match_warmupDamage "1"
 	setl team_maxplayers "10"
