--- a/etmain/configs/defaultpublic.config
+++ b/etmain/configs/defaultpublic.config
@@ -1,3 +1,6 @@
+//
+// Legacy Default Public
+//
 // !!! IMPORTANT NOTE !!!
 // Ensure all values are surrounded by quotes, the parser can't properly deal with negative values otherwise.
 
@@ -18,7 +21,6 @@ init
 	set g_voicechatsallowed "5"
 	set g_warmup "30"
 	set match_latejoin "1"
-	set match_mutespecs "1"
 	set match_timeoutcount "0"
 	set match_warmupDamage "0"
 	set team_maxplayers "0"
