--- a/etmain/configs/legacy3.config
+++ b/etmain/configs/legacy3.config
@@ -1,344 +1,366 @@
-// CB + ESL + CF ET Config
-// ET: Legacy Stopwatch
-// Based on the ETPRO version
+// Based on ETPro Global 3on3 Config
+// Legacy Stopwatch
 //
 // !!! IMPORTANT NOTE !!!
 // Ensure all values are surrounded by quotes, the parser can't properly deal with negative values otherwise.
 
-configname "^1Legacy ^73on3"
+configname "^1Legacy ^7Global 3on3"
 
 init
 {
-  setl sv_pure "1"
-  setl sv_cheats "0"
+	setl sv_pure "1"
+	setl sv_cheats "0"
 
-  setl g_gameType "3"
-  setl g_warmup "15"
-  setl g_doWarmup "1"
-  setl g_voiceChatsAllowed "5"
-  setl g_spectatorInactivity "0"
-  setl g_friendlyFire "1"
-  setl g_heavyWeaponRestriction "16"
-  setl g_medicChargeTime "45000"
-  setl g_fieldopsChargeTime "40000"
-  setl g_engineerChargeTime "30000"
-  setl g_soldierChargeTime "30000"
-  setl g_covertopschargetime "30000"
-  setl g_stickyCharge "2"
-  setl g_landminetimeout "0"
-  setl g_dropAmmo "0"
-  setl g_dropHealth "0"
-  setl g_teamForceBalance "0"
-  setl g_filtercams "1"
-  setl g_fastres "0"
-  setl g_noTeamSwitching "1"
-  setl g_alliedmaxlives "0"
-  setl g_axismaxlives "0"
-  setl g_speed "320"
-  setl g_gravity "800"
-  setl g_knockback "1000"
+	setl g_gameType "3"
+	setl g_warmup "15"
+	setl g_doWarmup "1"
+	setl g_voiceChatsAllowed "100"
+	setl g_spectatorInactivity "0"
+	setl g_friendlyFire "1"
+	setl g_heavyWeaponRestriction "16"
+	setl g_medicChargeTime "45000"
+	setl g_fieldopsChargeTime "40000"
+	setl g_engineerChargeTime "30000"
+	setl g_soldierChargeTime "30000"
+	setl g_covertopschargetime "30000"
+	setl g_stickyCharge "2"
+	setl g_landminetimeout "0"
+	setl g_dropAmmo "0"
+	setl g_dropHealth "0"
+	setl g_teamForceBalance "0"
+	setl g_filtercams "1"
+	setl g_fastres "0"
+	setl g_noTeamSwitching "1"
+	setl g_alliedmaxlives "0"
+	setl g_axismaxlives "0"
+	setl g_speed "320"
+	setl g_gravity "800"
+	setl g_knockback "1000"
 
-  setl team_maxSoldiers "0"
-  setl team_maxMedics "-1"
-  setl team_maxEngineers "-1"
-  setl team_maxFieldops "-1"
-  setl team_maxCovertops "-1"
+	setl team_maxSoldiers "0"
+	setl team_maxMedics "-1"
+	setl team_maxEngineers "-1"
+	setl team_maxFieldops "-1"
+	setl team_maxCovertops "-1"
 
-  setl team_maxFlamers "0"
-  setl team_maxMachineguns "0"
-  setl team_maxMortars "0"
-  setl team_maxRockets "0"
-  setl team_maxRiflegrenades "0"
-  setl team_maxLandmines "0"
+	setl team_maxFlamers "0"
+	setl team_maxMachineguns "0"
+	setl team_maxMortars "0"
+	setl team_maxRockets "0"
+	setl team_maxRiflegrenades "1"
+	setl team_maxLandmines "0"
 
-  setl team_maxAirstrikes "0.0"
-  setl team_maxArtillery "0.0"
+	setl team_maxAirstrikes "0.0"
+	setl team_maxArtillery "0.0"
 
-  setl team_riflegrenades "0"
+	setl team_riflegrenades "0"
 
-  setl match_latejoin "1"
-  setl match_minplayers "2"
-  setl match_mutespecs "0"
-  setl match_readypercent "100"
-  setl match_timeoutcount "2"
-  setl match_timeoutlength "240"
-  setl match_warmupDamage "2"
-  setl team_maxplayers "0"
-  setl team_nocontrols "0"
+	setl match_latejoin "1"
+	setl match_minplayers "2"
+	setl match_readypercent "100"
+	setl match_timeoutcount "2"
+	setl match_timeoutlength "240"
+	setl match_warmupDamage "2"
+	setl team_maxplayers "0"
+	setl team_nocontrols "0"
 
-  setl sv_minping "0"
-  setl sv_maxping "0"
+	setl sv_minping "0"
+	setl sv_maxping "0"
 
-  setl pmove_fixed "0"
-  set nextmap "map_restart 0"
+	setl pmove_fixed "0"
+	set nextmap "map_restart 0"
 
-  setl g_allowVote "1"
-  setl vote_allow_balancedteams "0"
-  setl vote_allow_config "1"
-  setl vote_allow_friendlyfire "0"
-  setl vote_allow_gametype "0"
-  setl vote_allow_kick "1"
-  setl vote_allow_map "1"
-  setl vote_allow_matchreset "1"
-  setl vote_allow_mutespecs "1"
-  setl vote_allow_muting "1"
-  setl vote_allow_nextmap "0"
-  setl vote_allow_referee "1"
-  setl vote_allow_shuffleteams "0"
-  setl vote_allow_shuffleteams_norestart "0"
-  setl vote_allow_surrender "0"
-  setl vote_allow_swapteams "1"
-  setl vote_allow_timelimit "1"
-  setl vote_allow_warmupdamage "0"
-  setl vote_allow_maprestart "1"
-  setl vote_allow_cointoss "1"
-  setl vote_limit "99"
-  setl vote_percent "51"
+	setl g_allowVote "1"
+	setl vote_allow_balancedteams "0"
+	setl vote_allow_config "1"
+	setl vote_allow_friendlyfire "0"
+	setl vote_allow_gametype "0"
+	setl vote_allow_kick "1"
+	setl vote_allow_map "1"
+	setl vote_allow_matchreset "1"
+	setl vote_allow_mutespecs "1"
+	setl vote_allow_muting "1"
+	setl vote_allow_nextmap "0"
+	setl vote_allow_referee "1"
+	setl vote_allow_shuffleteams "0"
+	setl vote_allow_shuffleteams_norestart "0"
+	setl vote_allow_surrender "0"
+	setl vote_allow_swapteams "1"
+	setl vote_allow_timelimit "1"
+	setl vote_allow_warmupdamage "0"
+	setl vote_allow_maprestart "1"
+	setl vote_allow_cointoss "1"
+	setl vote_limit "99"
+	setl vote_percent "51"
 
-  setl g_mapscriptdirectory "mapscripts"
-  setl g_mapConfigs ""
+	setl g_mapscriptdirectory "mapscripts"
+	setl g_mapConfigs ""
 
-  setl skill_battlesense "-1"
-  setl skill_engineer "-1"
-  setl skill_medic "-1"
-  setl skill_fieldops "-1"
-  setl skill_lightweapons "-1"
-  setl skill_soldier "-1"
-  setl skill_covertops "-1"
+	setl skill_battlesense "-1"
+	setl skill_engineer "-1"
+	setl skill_medic "-1"
+	setl skill_fieldops "-1"
+	setl skill_lightweapons "-1"
+	setl skill_soldier "-1"
+	setl skill_covertops "-1"
 
-  setl g_intermissiontime "20"
-  setl g_multiview "0"
-  setl g_shove "60"
-  setl g_antiwarp "1"
-  setl g_fixedphysics "1"
-  setl g_fixedphysicsfps "125"
-  setl g_campaignfile ""
+	setl g_intermissiontime "20"
+	setl g_multiview "0"
+	setl g_shove "60"
+	setl g_antiwarp "1"
+	setl g_fixedphysics "1"
+	setl g_fixedphysicsfps "125"
+	setl g_campaignfile ""
 
-  setl g_pronedelay "1"
+	setl g_pronedelay "1"
 
-  // set this to disable wolfadmin or enable custom Lua files
-  //setl lua_modules ""
+	// set this to disable wolfadmin or enable custom Lua files
+	//setl lua_modules ""
 
-  set g_log "legacy3.log"
+	set g_log "legacy3.log"
 
-  command "sv_cvarempty"
+	command "sv_cvarempty"
 
-  command "sv_cvar cl_freelook EQ 1"
-  command "sv_cvar cl_pitchspeed EQ 0"
-  command "sv_cvar cl_yawspeed EQ 0"
-  command "sv_cvar cl_timenudge EQ 0"
+	command "sv_cvar cl_freelook EQ 1"
+	command "sv_cvar cl_pitchspeed EQ 0"
+	command "sv_cvar cl_yawspeed EQ 0"
+	command "sv_cvar cl_timenudge EQ 0"
 
-  command "sv_cvar cg_simpleitems EQ 0"
+	command "sv_cvar cg_simpleitems IN 0 1"
+	command "sv_cvar cg_fov IN 90 105"
+	command "sv_cvar cg_shadows IN 0 1"
+	command "sv_cvar cg_autoaction IN 2 7"
 
-  command "sv_cvar cg_fov IN 90 105"
-  command "sv_cvar cg_shadows IN 0 1"
-  command "sv_cvar cg_autoaction IN 2 7"
+	command "sv_cvar rate EQ 25000"
+	command "sv_cvar cl_maxpackets EQ 125"
+	command "sv_cvar snaps EQ 20"
+	command "sv_cvar com_maxfps IN 40 125"
 
-  command "sv_cvar rate EQ 25000"
-  command "sv_cvar cl_maxpackets EQ 125"
-  command "sv_cvar snaps EQ 20"
-  command "sv_cvar com_maxfps IN 40 125"
+	command "sv_cvar m_pitch OUT -0.015 0.015"
+	command "sv_cvar m_yaw IN -0.022 0.022"
 
-  command "sv_cvar m_pitch OUT -0.015 0.015"
-  command "sv_cvar m_yaw IN -0.022 0.022"
+	command "sv_cvar r_ambientScale EQ 0.5"
+	command "sv_cvar r_drawentities EQ 1"
+	command "sv_cvar r_drawworld EQ 1"
+	command "sv_cvar r_lightmap EQ 0"
+	command "sv_cvar r_showtris EQ 0"
+	command "sv_cvar r_znear EQ 3"
+	command "sv_cvar r_allowextensions EQ 1"
+	command "sv_cvar r_ati_fsaa_samples EQ 0" // vanilla clients only
+	command "sv_cvar r_ati_truform_tess EQ 0" // vanilla clients only
+	command "sv_cvar r_clamptoedge EQ 1" // vanilla clients only
+	command "sv_cvar r_colorMipLevels EQ 0"
+	command "sv_cvar r_depthbits IN 24 32"
+	command "sv_cvar r_detailtextures EQ 0"
+	command "sv_cvar r_flares IN 0 1"
+	command "sv_cvar r_ext_ATI_pntriangles EQ 0" // vanilla clients only
+	command "sv_cvar r_nv_fogdist_mode INCLUDE NV GL_EYE_RADIAL_NV" // vanilla clients only
+	command "sv_cvar r_primitives IN 0 2"
+	command "sv_cvar r_subdivisions IN 1 20"
+	command "sv_cvar r_lodcurveerror GE 60"
 
-  command "sv_cvar r_ambientScale EQ 0.5"
-  command "sv_cvar r_drawentities EQ 1"
-  command "sv_cvar r_drawworld EQ 1"
-  command "sv_cvar r_lightmap EQ 0"
-  command "sv_cvar r_showtris EQ 0"
-  command "sv_cvar r_znear EQ 3"
-  command "sv_cvar r_allowextensions EQ 1"
-  command "sv_cvar r_ati_fsaa_samples EQ 0" // vanilla clients only
-  command "sv_cvar r_ati_truform_tess EQ 0" // vanilla clients only
-  command "sv_cvar r_clamptoedge EQ 1" // vanilla clients only
-  command "sv_cvar r_colorMipLevels EQ 0"
-  command "sv_cvar r_depthbits IN 24 32"
-  command "sv_cvar r_detailtextures EQ 0"
-  command "sv_cvar r_flares IN 0 1"
-  command "sv_cvar r_ext_ATI_pntriangles EQ 0" // vanilla clients only
-  command "sv_cvar r_nv_fogdist_mode INCLUDE NV GL_EYE_RADIAL_NV" // vanilla clients only
-  command "sv_cvar r_primitives IN 0 2"
-  command "sv_cvar r_subdivisions IN 1 20"
-  command "sv_cvar r_lodcurveerror GE 60"
-
-  command "sv_cvar r_wolffog EQ 0"
-  command "sv_cvar r_zfar EQ 0"
+	command "sv_cvar r_wolffog EQ 0"
+	command "sv_cvar r_zfar EQ 0"
 }
+
 map default
 {
-  set g_userTimeLimit "0"
-  setl g_useralliedrespawntime "0"
-  setl g_useraxisrespawntime "0"
-  setl g_moverScale "1.0"
-  command "sv_cvar r_drawfoliage EQ 1"
+	set g_userTimeLimit "0"
+	setl g_useralliedrespawntime "0"
+	setl g_useraxisrespawntime "0"
+	setl g_moverScale "1.0"
+	setl team_maxMedics -1
+	setl team_maxEngineers -1
+	setl team_maxFieldops -1
+	setl team_maxCovertops -1
+	command "sv_cvar r_drawfoliage EQ 1"
 }
 map fueldump
 {
-  set g_userTimeLimit "12"
-  setl g_moverScale "1.5"
-  mapscripthash "E2EC013C9CB6C9F66635EDE8A2BBABA1CA87C122"
-}
-map sw_fueldump
-{
-  setl g_usertimelimit "12"
-  setl g_moverScale "1.4"
-  mapscripthash "8C9C0A73737ADC454C1D00F2CD619F0AA6360212"
+	set g_userTimeLimit "12"
+	setl g_moverScale "1.5"
+	mapscripthash ""
 }
 map radar
 {
-  set "g_userTimeLimit 12"
-  command "sv_cvar r_drawfoliage EQ 0"
-  mapscripthash "452B480821502F7DC8925B75C7DB34698A8F1E9B"
+	set g_userTimeLimit "12"
+	command "sv_cvar r_drawfoliage EQ 0"
+	mapscripthash ""
 }
 map battery
 {
-  set g_userTimeLimit "10"
-  mapscripthash "61709BCD0D4DFC0BC6523E01C456F0DBE295CCD8"
+	set g_userTimeLimit "10"
+	mapscripthash ""
 }
 map goldrush
 {
-  set g_userTimeLimit "15"
-  setl g_moverScale "1.5"
-  mapscripthash "D3275D44A296BA7A2A5CA0031B069D7E8851AD0A"
+	set g_userTimeLimit "12"
+	setl g_moverScale "1.5"
+	mapscripthash ""
 }
 map sw_goldrush_te
 {
-  set g_userTimeLimit "15"
-  setl g_moverScale "1.0"
-  mapscripthash "24369BA01322A77FD0BC7BB1E3979FDC9DDC6B37"
+	set g_userTimeLimit "12"
+	setl g_moverScale "1.0"
+	mapscripthash ""
 }
 map oasis
 {
-  set g_userTimeLimit "12"
-  setl g_useralliedrespawntime "15"
-  setl g_useraxisrespawntime "30"
-  mapscripthash "F66E3D3D51AFD5439CD7D917F4E01F96AC473145"
+	set g_userTimeLimit "12"
+	setl g_useralliedrespawntime "15"
+	setl g_useraxisrespawntime "30"
+	mapscripthash ""
 }
 map sw_oasis_b3
 {
-  set g_userTimeLimit "15"
-  setl g_useralliedrespawntime "15"
-  setl g_useraxisrespawntime "30"
-  mapscripthash "4D6CFD2E369C3FFD807963AEEE42E1CFD4930F4A"
+	set g_userTimeLimit "12"
+	setl g_useralliedrespawntime "15"
+	setl g_useraxisrespawntime "30"
+	mapscripthash ""
 }
 map railgun
 {
-  set g_userTimeLimit "12"
-  setl g_useralliedrespawntime "30"
-  setl g_useraxisrespawntime "15"
-  setl g_moverScale "1.0"
-  mapscripthash "EE0CE68EA03754CAEF4910C32FFF2D498830B489"
+	set g_userTimeLimit "12"
+	setl g_useralliedrespawntime "30"
+	setl g_useraxisrespawntime "15"
+	setl g_moverScale "1.0"
+	mapscripthash ""
 }
 map et_ice
 {
-  set g_userTimeLimit "10"
-  setl g_useraxisrespawntime "25"
-  mapscripthash "D4FC93D5FCE7B94E5FA443A441ECD85FFCB7FF2B"
+	set g_userTimeLimit "10"
+	setl g_useraxisrespawntime "25"
+	mapscripthash ""
 }
 map tc_base
 {
-  set g_userTimeLimit "10"
-  mapscripthash "18C20144F2F09818DD41BF4A5EBAD863BFA7A3F5"
+	set g_userTimeLimit "10"
+	mapscripthash ""
 }
 map reactor_final
 {
-  set g_userTimeLimit "10"
-  setl g_useralliedrespawntime "20"
-  setl g_useraxisrespawntime "30"
-  mapscripthash "B3065DD47E420BFB3338F6D8F993D1ADB6ECE63A"
+	set g_userTimeLimit "10"
+	setl g_useralliedrespawntime "20"
+	setl g_useraxisrespawntime "30"
+	mapscripthash ""
 }
 map dubrovnik_final
 {
-  setl g_useraxisrespawntime "30"
-  setl g_useralliedrespawntime "10"
-  mapscripthash "98718FC022E5E53A8E3131A37189E3633084F820"
+	setl g_useraxisrespawntime "30"
+	setl g_useralliedrespawntime "10"
+	mapscripthash ""
 }
 map braundorf_b4
 {
-  set g_userTimeLimit "10"
-  mapscripthash "6ABABB29DE30F01E996F07376CBF76B59CEBDB15"
+	set g_userTimeLimit "10"
+	mapscripthash ""
 }
 map frostbite
 {
-  set g_userTimeLimit "10"
-  setl g_useralliedrespawntime "25"
-  setl g_useraxisrespawntime "30"
-  mapscripthash "68E89CCF1F8AC8D9034705D54A1ECBBEF503DB4E"
+	set g_userTimeLimit "10"
+	setl g_useralliedrespawntime "25"
+	setl g_useraxisrespawntime "30"
+	mapscripthash ""
 }
 map adlernest
 {
-  set g_userTimeLimit "10"
-  mapscripthash "DCB82154EFF22F4F987CDCE2AC62092B984A98DC"
+	set g_userTimeLimit "10"
+	mapscripthash ""
 }
 map warbell
 {
-  set g_userTimeLimit "15"
-  setl g_useralliedrespawntime "30"
-  setl g_useraxisrespawntime "15"
-  mapscripthash "21C2CD515B183664F4CDF4F2EBFAF15B368EF041"
+	set g_userTimeLimit "15"
+	setl g_useralliedrespawntime "30"
+	setl g_useraxisrespawntime "15"
+	mapscripthash ""
 }
 map supply
 {
-  set g_userTimeLimit "12"
-  mapscripthash "E58331F306968409FDAA370DE3BE3D5317CE86BF"
+	set g_userTimeLimit "12"
+	mapscripthash ""
 }
 map supplydepot2
 {
-  set g_userTimeLimit "12"
-  mapscripthash "4CE8A2E699DDAAB1787802E0A49599FE2AC434E3"
+	set g_userTimeLimit "12"
+	mapscripthash ""
 }
 map sw_battery
 {
-  set g_userTimeLimit "12"
-  mapscripthash "F3C4054DC1E486F4F3AD179947434E4651E01A97"
+	set g_userTimeLimit "12"
+	mapscripthash ""
 }
 map sp_delivery_te
 {
-  set g_userTimeLimit "12"
-  setl g_useralliedrespawntime "20"
-  setl g_useraxisrespawntime "30"
-  mapscripthash "8E97A9BA385452B153C81C53925574E3BDA5314E"
+	set g_userTimeLimit "12"
+	setl g_useralliedrespawntime "20"
+	setl g_useraxisrespawntime "30"
+	mapscripthash ""
 }
 map bremen_b2
 {
-  set g_usertimelimit "12"
-  mapscripthash "36BAFF5055C76EC1A83A8ABE0D58F038BB100140"
+	set g_usertimelimit "12"
+	mapscripthash ""
+}
+map bremen_b3
+{
+	set g_usertimelimit "12"
+	mapscripthash ""
 }
 map et_beach
 {
-  set g_userTimeLimit "10"
-  mapscripthash "7DB0471156ABB182E5D33A83E1D806100F586A01"
+	set g_userTimeLimit "10"
+	mapscripthash ""
 }
 map karsiah_te2
 {
-  set g_userTimeLimit "12"
-  mapscripthash "1568A8927DC2E0DF76D688BB57A53E9B66A4D507"
+	set g_userTimeLimit "12"
+	mapscripthash ""
 }
 map wolken1_b1
 {
-  set g_userTimeLimit "12"
-  mapscripthash "CEA279C2F1FC44DEF59025A4387D268793630B46"
+	set g_userTimeLimit "12"
+	mapscripthash ""
 }
 map mp_sillyctf
 {
-  set g_userTimeLimit "10"
-  setl g_useralliedrespawntime "15"
-  setl g_useraxisrespawntime "15"
-  setl team_maxMedics "0"
-  setl team_maxEngineers "0"
-  setl team_maxFieldops "-1"
-  setl team_maxCovertops "0"
-  mapscripthash "F33FF77286816FD4474627678008009165F39710"
+	set g_userTimeLimit "10"
+	setl g_useralliedrespawntime "15"
+	setl g_useraxisrespawntime "15"
+	setl team_maxMedics "0"
+	setl team_maxEngineers "0"
+	setl team_maxFieldops "-1"
+	setl team_maxCovertops "0"
+	mapscripthash ""
 }
 map the_station
 {
-  set g_userTimeLimit "10"
-  setl g_useralliedrespawntime "15"
-  setl g_useraxisrespawntime "15"
-  setl team_maxMedics "0"
-  setl team_maxEngineers "0"
-  setl team_maxFieldops "-1"
-  setl team_maxCovertops "0"
-  mapscripthash "6F3C0F71EF358BD91617A3B6807B560078584865"
+	set g_userTimeLimit "10"
+	setl g_useralliedrespawntime "15"
+	setl g_useraxisrespawntime "15"
+	setl team_maxMedics "0"
+	setl team_maxEngineers "0"
+	setl team_maxFieldops "-1"
+	setl team_maxCovertops "0"
+	mapscripthash ""
+}
+map te_escape2
+{
+	set g_userTimeLimit "12"
+	setl g_useralliedrespawntime "20"
+	setl g_useraxisrespawntime "30"
+	mapscripthash ""
+}
+map et_ufo_final
+{
+	set g_userTimeLimit "12"
+	setl g_useralliedrespawntime "20"
+	setl g_useraxisrespawntime "30"
+	mapscripthash ""
+}
+map erdenberg_t1
+{
+	set g_userTimeLimit "12"
+	setl g_useralliedrespawntime "20"
+	setl g_useraxisrespawntime "30"
+	mapscripthash ""
 }
