--- a/etmain/configs/legacy1.config
+++ b/etmain/configs/legacy1.config
@@ -1,250 +1,236 @@
-// CB + ESL + CF ET Config
-// ET: Legacy Stopwatch
-// Based on the ETPRO version
+// Based on ETPro Global 1on1 Config
+// Legacy Stopwatch
 //
 // !!! IMPORTANT NOTE !!!
 // Ensure all values are surrounded by quotes, the parser can't properly deal with negative values otherwise.
 
-configname "^1Legacy ^71on1"
+configname "^1Legacy ^7Global 1on1"
 
 init
 {
-  setl sv_pure "1"
-  setl sv_cheats "0"
+	setl sv_pure "1"
+	setl sv_cheats "0"
 
-  setl g_gameType "3"
-  setl g_warmup "15"
-  setl g_doWarmup "1"
-  setl g_voiceChatsAllowed "5"
-  setl g_spectatorInactivity "0"
-  setl g_friendlyFire "1"
-  setl g_heavyWeaponRestriction "0"
-  setl g_medicChargeTime "45000"
-  setl g_fieldopsChargeTime "40000"
-  setl g_engineerChargeTime "30000"
-  setl g_soldierChargeTime "30000"
-  setl g_covertopschargetime "30000"
-  setl g_stickyCharge "2"
-  setl g_landminetimeout "0"
-  setl g_dropAmmo "0"
-  setl g_dropHealth "0"
-  setl g_teamForceBalance "0"
-  setl g_filtercams "1"
-  setl g_fastres "0"
-  setl g_noTeamSwitching "1"
-  setl g_alliedmaxlives "0"
-  setl g_axismaxlives "0"
-  setl g_speed "320"
-  setl g_gravity "800"
-  setl g_knockback "1000"
+	setl g_gameType "3"
+	setl g_warmup "15"
+	setl g_doWarmup "1"
+	setl g_voiceChatsAllowed "100"
+	setl g_spectatorInactivity "0"
+	setl g_friendlyFire "1"
+	setl g_heavyWeaponRestriction "0"
+	setl g_medicChargeTime "45000"
+	setl g_fieldopsChargeTime "40000"
+	setl g_engineerChargeTime "30000"
+	setl g_soldierChargeTime "30000"
+	setl g_covertopschargetime "30000"
+	setl g_stickyCharge "2"
+	setl g_landminetimeout "0"
+	setl g_dropAmmo "0"
+	setl g_dropHealth "0"
+	setl g_teamForceBalance "0"
+	setl g_filtercams "1"
+	setl g_fastres "0"
+	setl g_noTeamSwitching "1"
+	setl g_alliedmaxlives "0"
+	setl g_axismaxlives "0"
+	setl g_speed "320"
+	setl g_gravity "800"
+	setl g_knockback "1000"
 
-  setl team_maxSoldiers "0"
-  setl team_maxMedics "0"
-  setl team_maxEngineers "0"
-  setl team_maxFieldops "-1"
-  setl team_maxCovertops "0"
+	setl team_maxSoldiers "0"
+	setl team_maxMedics "0"
+	setl team_maxEngineers "0"
+	setl team_maxFieldops "-1"
+	setl team_maxCovertops "0"
 
-  setl team_maxFlamers "0"
-  setl team_maxMachineguns "0"
-  setl team_maxMortars "0"
-  setl team_maxRockets "0"
-  setl team_maxRiflegrenades "0"
-  setl team_maxLandmines "0"
+	setl team_maxFlamers "0"
+	setl team_maxMachineguns "0"
+	setl team_maxMortars "0"
+	setl team_maxRockets "0"
+	setl team_maxRiflegrenades "0"
+	setl team_maxLandmines "0"
 
-  setl team_maxAirstrikes "0.0"
-  setl team_maxArtillery "0.0"
+	setl team_maxAirstrikes "0.0"
+	setl team_maxArtillery "0.0"
 
-  setl team_riflegrenades "1"
+	setl team_riflegrenades "1"
 
-  setl match_latejoin "1"
-  setl match_minplayers "2"
-  setl match_mutespecs "0"
-  setl match_readypercent "100"
-  setl match_timeoutcount "2"
-  setl match_timeoutlength "90"
-  setl match_warmupDamage "2"
-  setl team_maxplayers "0"
-  setl team_nocontrols "0"
+	setl match_latejoin "1"
+	setl match_minplayers "2"
+	setl match_readypercent "100"
+	setl match_timeoutcount "2"
+	setl match_timeoutlength "90"
+	setl match_warmupDamage "2"
+	setl team_maxplayers "0"
+	setl team_nocontrols "0"
 
-  setl sv_minping "0"
-  setl sv_maxping "0"
+	setl sv_minping "0"
+	setl sv_maxping "0"
 
-  setl pmove_fixed "0"
-  set nextmap "map_restart 0"
+	setl pmove_fixed "0"
+	set nextmap "map_restart 0"
 
-  setl g_allowVote "1"
-  setl vote_allow_balancedteams "0"
-  setl vote_allow_config "1"
-  setl vote_allow_friendlyfire "0"
-  setl vote_allow_gametype "0"
-  setl vote_allow_kick "1"
-  setl vote_allow_map "1"
-  setl vote_allow_matchreset "1"
-  setl vote_allow_mutespecs "1"
-  setl vote_allow_muting "1"
-  setl vote_allow_nextmap "0"
-  setl vote_allow_referee "1"
-  setl vote_allow_shuffleteams "0"
-  setl vote_allow_shuffleteams_norestart "0"
-  setl vote_allow_surrender "0"
-  setl vote_allow_swapteams "1"
-  setl vote_allow_timelimit "1"
-  setl vote_allow_warmupdamage "0"
-  setl vote_allow_maprestart "1"
-  setl vote_allow_cointoss "1"
-  setl vote_limit "99"
-  setl vote_percent "51"
+	setl g_allowVote "1"
+	setl vote_allow_balancedteams "0"
+	setl vote_allow_config "1"
+	setl vote_allow_friendlyfire "0"
+	setl vote_allow_gametype "0"
+	setl vote_allow_kick "1"
+	setl vote_allow_map "1"
+	setl vote_allow_matchreset "1"
+	setl vote_allow_mutespecs "1"
+	setl vote_allow_muting "1"
+	setl vote_allow_nextmap "0"
+	setl vote_allow_referee "1"
+	setl vote_allow_shuffleteams "0"
+	setl vote_allow_shuffleteams_norestart "0"
+	setl vote_allow_surrender "0"
+	setl vote_allow_swapteams "1"
+	setl vote_allow_timelimit "1"
+	setl vote_allow_warmupdamage "0"
+	setl vote_allow_maprestart "1"
+	setl vote_allow_cointoss "1"
+	setl vote_limit "99"
+	setl vote_percent "51"
 
-  setl g_mapscriptdirectory "mapscripts"
-  setl g_mapConfigs ""
+	setl g_mapscriptdirectory "mapscripts"
+	setl g_mapConfigs ""
 
-  setl skill_battlesense "-1"
-  setl skill_engineer "-1"
-  setl skill_medic "-1"
-  setl skill_fieldops "-1"
-  setl skill_lightweapons "-1"
-  setl skill_soldier "-1"
-  setl skill_covertops "-1"	
+	setl skill_battlesense "-1"
+	setl skill_engineer "-1"
+	setl skill_medic "-1"
+	setl skill_fieldops "-1"
+	setl skill_lightweapons "-1"
+	setl skill_soldier "-1"
+	setl skill_covertops "-1"
 
-  setl g_intermissiontime "20"
-  setl g_multiview "0"
-  setl g_shove "0"
-  setl g_antiwarp "1"
-  setl g_fixedphysics "1"
-  setl g_fixedphysicsfps "125"
-  setl g_campaignfile ""
+	setl g_intermissiontime "20"
+	setl g_multiview "0"
+	setl g_shove "0"
+	setl g_antiwarp "1"
+	setl g_fixedphysics "1"
+	setl g_fixedphysicsfps "125"
+	setl g_campaignfile ""
 
-  setl g_pronedelay "1"
+	setl g_pronedelay "1"
 
-  // set this to disable wolfadmin or enable custom Lua files
-  //setl lua_modules ""
+	// set this to disable wolfadmin or enable custom Lua files
+	//setl lua_modules ""
 
-  set g_log "legacy1.log"
+	set g_log "legacy1.log"
 
-  command "sv_cvarempty"
+	command "sv_cvarempty"
 
-  command "sv_cvar cl_freelook EQ 1"
-  command "sv_cvar cl_pitchspeed EQ 0"
-  command "sv_cvar cl_yawspeed EQ 0"
-  command "sv_cvar cl_timenudge EQ 0"
+	command "sv_cvar cl_freelook EQ 1"
+	command "sv_cvar cl_pitchspeed EQ 0"
+	command "sv_cvar cl_yawspeed EQ 0"
+	command "sv_cvar cl_timenudge EQ 0"
 
-  command "sv_cvar cg_simpleitems EQ 0"
+	command "sv_cvar cg_simpleitems IN 0 1"
 
-  command "sv_cvar cg_fov IN 90 105"
-  command "sv_cvar cg_shadows IN 0 1"
-  command "sv_cvar cg_autoaction IN 2 7"
+	command "sv_cvar cg_fov IN 90 105"
+	command "sv_cvar cg_shadows IN 0 1"
+	command "sv_cvar cg_autoaction IN 2 7"
 
-  command "sv_cvar rate EQ 25000"
-  command "sv_cvar cl_maxpackets EQ 125"
-  command "sv_cvar snaps EQ 20"
-  command "sv_cvar com_maxfps IN 40 125"
+	command "sv_cvar rate EQ 25000"
+	command "sv_cvar cl_maxpackets EQ 125"
+	command "sv_cvar snaps EQ 20"
+	command "sv_cvar com_maxfps IN 40 125"
 
-  command "sv_cvar m_pitch OUT -0.015 0.015"
-  command "sv_cvar m_yaw IN -0.022 0.022"
+	command "sv_cvar m_pitch OUT -0.015 0.015"
+	command "sv_cvar m_yaw IN -0.022 0.022"
 
-  command "sv_cvar r_ambientScale EQ 0.5"
-  command "sv_cvar r_drawentities EQ 1"
-  command "sv_cvar r_drawworld EQ 1"
-  command "sv_cvar r_lightmap EQ 0"
-  command "sv_cvar r_showtris EQ 0"
-  command "sv_cvar r_znear EQ 3"
-  command "sv_cvar r_allowextensions EQ 1"
-  command "sv_cvar r_ati_fsaa_samples EQ 0" // vanilla clients only
-  command "sv_cvar r_ati_truform_tess EQ 0" // vanilla clients only
-  command "sv_cvar r_clamptoedge EQ 1" // vanilla clients only
-  command "sv_cvar r_colorMipLevels EQ 0"
-  command "sv_cvar r_depthbits IN 24 32"
-  command "sv_cvar r_detailtextures EQ 0"
-  command "sv_cvar r_flares IN 0 1"
-  command "sv_cvar r_ext_ATI_pntriangles EQ 0" // vanilla clients only
-  command "sv_cvar r_nv_fogdist_mode INCLUDE NV GL_EYE_RADIAL_NV" // vanilla clients only
-  command "sv_cvar r_primitives IN 0 2"
-  command "sv_cvar r_subdivisions IN 1 20"
-  command "sv_cvar r_lodcurveerror GE 60"
+	command "sv_cvar r_ambientScale EQ 0.5"
+	command "sv_cvar r_drawentities EQ 1"
+	command "sv_cvar r_drawworld EQ 1"
+	command "sv_cvar r_lightmap EQ 0"
+	command "sv_cvar r_showtris EQ 0"
+	command "sv_cvar r_znear EQ 3"
+	command "sv_cvar r_allowextensions EQ 1"
+	command "sv_cvar r_ati_fsaa_samples EQ 0" // vanilla clients only
+	command "sv_cvar r_ati_truform_tess EQ 0" // vanilla clients only
+	command "sv_cvar r_clamptoedge EQ 1" // vanilla clients only
+	command "sv_cvar r_colorMipLevels EQ 0"
+	command "sv_cvar r_depthbits IN 24 32"
+	command "sv_cvar r_detailtextures EQ 0"
+	command "sv_cvar r_flares IN 0 1"
+	command "sv_cvar r_ext_ATI_pntriangles EQ 0" // vanilla clients only
+	command "sv_cvar r_nv_fogdist_mode INCLUDE NV GL_EYE_RADIAL_NV" // vanilla clients only
+	command "sv_cvar r_primitives IN 0 2"
+	command "sv_cvar r_subdivisions IN 1 20"
+	command "sv_cvar r_lodcurveerror GE 60"
 
-  command "sv_cvar r_wolffog EQ 0"
-  command "sv_cvar r_zfar EQ 0"
+	command "sv_cvar r_wolffog EQ 0"
+	command "sv_cvar r_zfar EQ 0"
 }
 
 map default
 {
-  set g_userTimeLimit "10"
-  setl g_useralliedrespawntime "0"
-  setl g_useraxisrespawntime "0"
-  setl g_moverScale "1.0"
+	set g_userTimeLimit "10"
+	setl g_useralliedrespawntime "0"
+	setl g_useraxisrespawntime "0"
+	setl g_moverScale "1.0"
 }
-
 map te_valhalla
 {
-  set g_userTimeLimit "5"
-  setl g_useralliedrespawntime "1"
-  setl g_useraxisrespawntime "1"
-  mapscripthash "8611AFDD4125F789D2689C4F230DE5052D8E1579"
+	set g_userTimeLimit "5"
+	setl g_useralliedrespawntime "1"
+	setl g_useraxisrespawntime "1"
+	mapscripthash ""
 }
 map multi_huntplace
 {
-  set "g_userTimeLimit 5"
-  setl g_useralliedrespawntime "1"
-  setl g_useraxisrespawntime "1"
-  mapscripthash "5C7814C6B49CB49087457F7C852D9D228D2F59CC"
+	set g_userTimeLimit "5"
+	setl g_useralliedrespawntime "1"
+	setl g_useraxisrespawntime "1"
+	mapscripthash ""
 }
 map tournementdm2
 {
-  set g_userTimeLimit "5"
-  setl g_useralliedrespawntime "1"
-  setl g_useraxisrespawntime "1"
-  mapscripthash "E91E7E5C9156B2EEE3802984D6B1EB0504C3A6A4"
+	set g_userTimeLimit "5"
+	setl g_useralliedrespawntime "1"
+	setl g_useraxisrespawntime "1"
+	mapscripthash ""
 }
 map ctf_multi
 {
-  set g_userTimeLimit "10"
-  setl g_useralliedrespawntime "15"
-  setl g_useraxisrespawntime "15"
-  mapscripthash "A2C30C8C3411893EB6F9A61AB3AD38422C27E0F2"
+	set g_userTimeLimit "10"
+	setl g_useralliedrespawntime "15"
+	setl g_useraxisrespawntime "15"
+	mapscripthash ""
 }
 map ctf_multi2
 {
-  set g_usertimelimit "10"
-  setl g_useralliedrespawntime "15"
-  setl g_useraxisrespawntime "15"
-  mapscripthash "A2C30C8C3411893EB6F9A61AB3AD38422C27E0F2"
+	set g_usertimelimit "10"
+	setl g_useralliedrespawntime "15"
+	setl g_useraxisrespawntime "15"
+	mapscripthash ""
 }
 map mp_sillyctf
 {
-  set g_userTimeLimit "10"
-  setl g_useralliedrespawntime "15"
-  setl g_useraxisrespawntime "15"
-  mapscripthash "F33FF77286816FD4474627678008009165F39710"
+	set g_userTimeLimit "10"
+	setl g_useralliedrespawntime "15"
+	setl g_useraxisrespawntime "15"
+	mapscripthash ""
 }
 map ctf_well
 {
-  set g_usertimelimit "10"
-  setl g_useralliedrespawntime "10"
-  setl g_useraxisrespawntime "10"
-  mapscripthash "F540016365A6002323F53B171C37076EF651FB76"
+	set g_usertimelimit "10"
+	setl g_useralliedrespawntime "10"
+	setl g_useraxisrespawntime "10"
+	mapscripthash ""
 }
-
-/* FIXME: parser
-map 1v1dm
-{
-  set g_userTimeLimit "5"
-  setl g_useralliedrespawntime "1"
-  setl g_useraxisrespawntime "1"
-  mapscripthash "F8D9A59DBACA8963B41C4EAE1703F1D8AD1E593E"
-}
-*/
-
 map osiris
 {
-  set g_userTimeLimit "10"
-  setl g_useralliedrespawntime "10"
-  setl g_useraxisrespawntime "10"
-  mapscripthash "391ABEAA25FD6D3B49A4BC3648B322F85DDC9846"
+	set g_userTimeLimit "10"
+	setl g_useralliedrespawntime "10"
+	setl g_useraxisrespawntime "10"
+	mapscripthash ""
 }
 map the_station
 {
-  set g_userTimeLimit "10"
-  setl g_useralliedrespawntime "12"
-  setl g_useraxisrespawntime "12"
-  mapscripthash "6F3C0F71EF358BD91617A3B6807B560078584865"
+	set g_userTimeLimit "10"
+	setl g_useralliedrespawntime "12"
+	setl g_useraxisrespawntime "12"
+	mapscripthash ""
 }
