--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,29 @@ before_script:
   - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
 script:
   - ./gradlew build
+notifications:
+  irc:
+    template:
+      - "%{repository}#%{build_number} %{commit} %{author}: %{message} %{build_url}"
+    channels:
+      - "irc.freenode.org#etlegacy"
+    on_success: change
+    on_failure: always
+    skip_join: true
+    use_notice: true
+  webhooks:
+    urls:
+      - https://xzy.com/api/webhooks/12345
+    on_success: change
+    on_failure: always
+    on_start: never
+
+# Discord notification
+#after_success:
+#  - wget https://raw.githubusercontent.com/DiscordHooks/travis-ci-discord-webhook/master/send.sh
+#  - chmod +x send.sh
+#  - ./send.sh success $WEBHOOK_URL
+after_failure:
+  - wget https://raw.githubusercontent.com/DiscordHooks/travis-ci-discord-webhook/master/send.sh
+  - chmod +x send.sh
+  - ./send.sh failure $WEBHOOK_URL
