--- a/.travis.yml
+++ b/.travis.yml
@@ -15,39 +15,14 @@ cache:
   - "$HOME/.gradle/caches/"
   - "$HOME/.gradle/wrapper/"
   - "$HOME/.android/build-cache"
+licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
 before_script:
   - sudo chmod +x gradlew
   - git clone https://github.com/rafal1137/NDK_ETL.git
   - export ANDROID_NDK_HOME=$HOME/NDK_ETL
   - export PATH=$PATH:$ANDROID_NDK_HOME
-  - mkdir "$ANDROID_HOME/licenses" || true
-  - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
-  - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
 script:
   - ./gradlew build
-notifications:
-  irc:
-    template:
-      - "%{repository}#%{build_number} %{commit} %{author}: %{message} %{build_url}"
-    channels:
-      - "irc.freenode.org#etlegacy"
-    on_success: change
-    on_failure: always
-    skip_join: true
-    use_notice: true
-  webhooks:
-    urls:
-      - https://xzy.com/api/webhooks/12345
-    on_success: change
-    on_failure: always
-    on_start: never
-
-# Discord notification
-#after_success:
-#  - wget https://raw.githubusercontent.com/DiscordHooks/travis-ci-discord-webhook/master/send.sh
-#  - chmod +x send.sh
-#  - ./send.sh success $WEBHOOK_URL
-after_failure:
-  - wget https://raw.githubusercontent.com/DiscordHooks/travis-ci-discord-webhook/master/send.sh
-  - chmod +x send.sh
-  - ./send.sh failure $WEBHOOK_URL
