misc: set default mod name as cmake variable, refs #1396

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,12 @@ include(CMakeDependentOption)
 include(cmake/ETLFunctions.cmake)
 
 #-----------------------------------------------------------------
+# General
+#-----------------------------------------------------------------
+
+set(MODNAME "legacy" CACHE STRING "Default mod name")
+
+#-----------------------------------------------------------------
 # Options
 #-----------------------------------------------------------------
 
