--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,7 @@ before_script:
   - git clone https://github.com/rafal1137/NDK_ETL.git
   - export ANDROID_NDK_HOME=$HOME/NDK_ETL/ndk-bundle
   - export PATH=$PATH:$ANDROID_NDK_HOME
+  - mkdir "$ANDROID_HOME/licenses" || true
+  - echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license"
 script:
   - ./gradlew assembleDebug
