--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: android
 jdk: oraclejdk8
 sudo: required
+env:
+  global:
+  - ANDROID_HOME=$HOME/android/sdk
+  - ANDROID_NDK_HOME=$HOME/android/sdk/ndk-bundle
 android:
   components:
   - tools
@@ -23,11 +27,10 @@ before_script:
   - git clone https://github.com/rafal1137/NDK_ETL.git
   - export ANDROID_NDK_HOME=$HOME/NDK_ETL/ndk-bundle
   - export PATH=$PATH:$ANDROID_NDK_HOME
-  - mkdir "$ANDROID_HOME/licenses" || true
   - echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license"
 install:
-  - echo y | sdkmanager "ndk-bundle"
-  - echo y | sdkmanager "ndk;16.1.4479499"
+#  - echo y | sdkmanager "ndk-bundle"
+#  - echo y | sdkmanager "ndk;16.1.4479499"
   - echo y | sdkmanager "cmake;3.10.2.4988404"
 script:
   - ./gradlew assembleDebug
