--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk: oraclejdk8
 sudo: required
 env:
   global:
-  - ANDROID_NDK_HOME=$HOME/android/sdk/ndk-bundle
+  - ANDROID_NDK_HOME=/usr/local/android-sdk
 android:
   components:
   - tools
@@ -28,8 +28,9 @@ before_script:
   - export PATH=$PATH:$ANDROID_NDK_HOME
   - echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license"
 install:
-#  - echo y | sdkmanager "ndk-bundle"
-#  - echo y | sdkmanager "ndk;16.1.4479499"
+  - echo y | sdkmanager "platforms;android-26"
+  - echo y | sdkmanager "ndk-bundle"
+  - echo y | sdkmanager "ndk;16.1.4479499"
   - echo y | sdkmanager "cmake;3.10.2.4988404"
 script:
-  - ./gradlew assembleDebug
+  - ./gradlew --stacktrace assembleDebug
