--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_script:
   - export PATH=$PATH:$ANDROID_NDK_HOME
   - echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license"
 install:
-  - echo y | sdkmanager "platforms;android-26"
+  - echo y | $HOME/android-sdk/tools/bin/sdkmanager "platforms;android-26" > /dev/null
   - echo y | sdkmanager "ndk-bundle"
   - echo y | sdkmanager "ndk;16.1.4479499"
   - echo y | sdkmanager "cmake;3.10.2.4988404"
