--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,6 @@ android:
   - tools
   - platform-tools
   - android-26
-  - cmake
-  - ndk-bundle
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
@@ -25,14 +23,17 @@ licenses:
     - 'google-gdk-license-.+'
 before_script:
   - sudo chmod +x gradlew
-  - git clone https://github.com/rafal1137/NDK_ETL.git
-  - export ANDROID_NDK_HOME=$HOME/NDK_ETL/ndk-bundle
-  - export PATH=$PATH:$ANDROID_NDK_HOME
+  - wget https://dl.google.com/android/repository/android-ndk-r16b-linux-x86_64.zip
+  - unzip android-ndk-r16b-linux-x86_64.zip -d $HOME
+  - export ANDROID_NDK_HOME=$HOME/android-ndk-r16b
+  #- git clone https://github.com/rafal1137/NDK_ETL.git
+  #- export ANDROID_NDK_HOME=$HOME/NDK_ETL/ndk-bundle
+  #- export PATH=$PATH:$ANDROID_NDK_HOME
   - echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license"
-#install:
-#  - echo y | $HOME/android-sdk/tools/bin/sdkmanager "platforms;android-26" > /dev/null
-#  - echo y | sdkmanager "ndk-bundle"
-#  - echo y | sdkmanager "ndk;16.1.4479499"
-#  - echo y | sdkmanager "cmake;3.10.2.4988404"
+before_install:
+  - echo y | sdkmanager "platforms;android-26" > /dev/null
+  - echo y | sdkmanager "ndk-bundle"
+  - echo y | sdkmanager "ndk;16.1.4479499"
+  - echo y | sdkmanager "cmake;3.10.2.4988404"
 script:
   - ./gradlew --stacktrace assembleDebug
