--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_script:
   #- wget https://dl.google.com/android/repository/android-ndk-r16b-linux-x86_64.zip
   #- unzip android-ndk-r16b-linux-x86_64.zip -d $HOME
   #- export ANDROID_NDK_HOME=$HOME/android-ndk-r16b
-  - git clone https://github.com/rafal1137/NDK_ETL.git $HOME
+  - git clone https://github.com/rafal1137/NDK_ETL.git
   - export ANDROID_NDK_HOME=$HOME/NDK_ETL/ndk-bundle
   #- export PATH=$PATH:$ANDROID_NDK_HOME
   - echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license"
