--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 language: android
 jdk: oraclejdk8
 sudo: required
-env:
-  global:
-  - ANDROID_NDK_HOME=/usr/local/android-sdk
 android:
   components:
   - tools
@@ -23,14 +20,14 @@ licenses:
     - 'google-gdk-license-.+'
 before_script:
   - sudo chmod +x gradlew
-  - wget https://dl.google.com/android/repository/android-ndk-r16b-linux-x86_64.zip
-  - unzip android-ndk-r16b-linux-x86_64.zip -d $HOME
-  - export ANDROID_NDK_HOME=$HOME/android-ndk-r16b
-  #- git clone https://github.com/rafal1137/NDK_ETL.git
-  #- export ANDROID_NDK_HOME=$HOME/NDK_ETL/ndk-bundle
-  #- export PATH=$PATH:$ANDROID_NDK_HOME
+  #- wget https://dl.google.com/android/repository/android-ndk-r16b-linux-x86_64.zip
+  #- unzip android-ndk-r16b-linux-x86_64.zip -d $HOME
+  #- export ANDROID_NDK_HOME=$HOME/android-ndk-r16b
+  - git clone https://github.com/rafal1137/NDK_ETL.git
+  - mv NDK_ETL $HOME
+  - export ANDROID_NDK_HOME=$HOME/NDK_ETL/ndk-bundle
   - echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license"
 before_install:
   - echo y | sdkmanager "cmake;3.10.2.4988404"
 script:
-  - ./gradlew --stacktrace assembleDebug
+  - ./gradlew assembleDebug
