misc: minor config files cleanup
Fixes some apostrophes so it is easy to use syntax highlighting.
No more horrendous mistakes in admin server config.

Any similarity with any existing server is purely coincidental.

--- a/misc/etmain/legacy.cfg
+++ b/misc/etmain/legacy.cfg
@@ -11,7 +11,7 @@
 // LOGGING & PROTECTION
 
 set g_log ""                                    // Enables game logging if set. Name of game logging file - logs weapon changes, kills, connects etc.
-set g_logSync "1"                               // Game logging options (0: buffered 1: sync'ed)
+set g_logSync "1"                               // Game logging options (0: buffered 1: synchronized)
 set g_protect "0"                               // Mod side security options
 
 // OPTIMIZATIONS
