--- a/misc/etmain/etl_server.cfg
+++ b/misc/etmain/etl_server.cfg
@@ -12,7 +12,7 @@
 
 // LOGGING & PROTECTION
 
-set logfile "2"                                 // enables console logging - 'etconsole.log' (1: enabled 2: enabled and sync'ed)
+set logfile "2"                                 // enables console logging - 'etconsole.log' (1: enabled 2: enabled and synchronized)
 set sv_protect "1"                              // getstatus response limit protection
 set sv_protectLog "sv_protect.log"              // when set all sv_protect and server security related messages are written into this log file
 set sv_floodProtect "1"                         // prevent server flooding
@@ -55,9 +55,9 @@ set sv_wwwFallbackURL ""                        // URL to send to if an http/ftp
 
 // MOTD ETC
 
-set sv_hostname "ET: Legacy Host"                // name of server here
+set sv_hostname "ET: Legacy Host"               // name of server here
 // max length is "12345678901234567890123456"   // (message should not be longer than this without the color codes)
-set server_motd0 " ^NET: Legacy ^7MOTD "         // message in right corner of join screen here
+set server_motd0 " ^NET: Legacy ^7MOTD "        // message in right corner of join screen here
 set server_motd1 ""
 set server_motd2 ""
 set server_motd3 ""
@@ -85,7 +85,7 @@ set g_voiceChatsAllowed "5"                     // number of VSays a player can 
 set g_doWarmup "0"                              // players have a warm up period
 set g_warmup "10"                               // warm up time (in seconds)
 set g_spectatorInactivity "0"                   // duration of spectator inactivity before auto-cick
-set match_latejoin "1"                          // allow players to join a match that's already begun
+set match_latejoin "1"                          // allow players to join a match that is already begun
 set match_minplayers "4"                        // minimum number of players needed to start a match
 set match_mutespecs "0"                         // mute spectators
 set match_readypercent "100"                    // % of players 'Ready' to start match
